--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "2.0.20",
-    "standard": "^17.0.0"
+    "standard": "17.0.0"
   },
   "dependencies": {
+    "@sentry/node": "^7.14.1",
+    "@sentry/tracing": "^7.14.1",
     "cors": "2.8.5",
-    "express": "4.18.1"
+    "dotenv": "16.0.2",
+    "express": "4.18.1",
+    "mongoose": "6.6.2"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
