--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "2.8.5",
     "dotenv": "16.0.2",
     "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
     "mongoose": "5.11.15",
     "mongoose-unique-validator": "3.1.0"
   },
