--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "start": "cross-env NODE_ENV=production node index.js",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "lint": "npm run lint",
     "test": "cross-env NODE_ENV=test PORT=1234 jest --verbose --silent",
     "test:watch": "npm run test -- --watch"
